many updates creating circles now works